--- a/book/src/main/resources-filtered/META-INF/resources/cdn/webapp/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/cdn/webapp/changelog.jspx
@@ -38,7 +38,12 @@ along with ao-cdn-webapp.  If not, see <https://www.gnu.org/licenses/>.
     tocLevels="1"
     datePublished="2023-03-27T11:14:41Z"
   >
-    <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
+    <c:set var="latestRelease" value="TODO" />
+    <c:if test="${
+      fn:endsWith('@{project.version}', '-SNAPSHOT')
+      and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')
+      and '@{project.version}' != (latestRelease.concat('-SNAPSHOT'))
+    }">
       <changelog:release
         projectName="@{documented.name}"
         version="@{project.version}"
