Sonatype's OSSRH service has been discontinued, using new OSSRH Staging API

--- a/book/src/main/resources-filtered/META-INF/resources/cdn/webapp/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/cdn/webapp/changelog.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 ao-cdn-webapp - Content delivery network (CDN) as a Web Application.
-Copyright (C) 2023  AO Industries, Inc.
+Copyright (C) 2023, 2025  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -37,6 +37,7 @@ along with ao-cdn-webapp.  If not, see <https://www.gnu.org/licenses/>.
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2023-03-27T11:14:41Z"
+    dateModified="2025-07-02T23:05:45Z"
   >
     <c:set var="latestRelease" value="TODO" />
     <c:if test="${
@@ -49,7 +50,6 @@ along with ao-cdn-webapp.  If not, see <https://www.gnu.org/licenses/>.
         version="@{project.version}"
         groupId="@{project.groupId}"
         artifactId="@{documented.artifactId}"
-        repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
       >
         <ul>
